# limine-boot-demo

./: .gitignore  .gitmodules  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config.toml
misc/: gdbinit  limine.conf  linker_aarch64.ld  linker_riscv64.ld  linker_x86_64.ld
misc/ld/: linker_riscv64.ld
scripts/: address-filter.py
src/: crt.rs  main.rs
src/arch/riscv/: cpulocal.rs  csr.rs  exception.S  exception.rs  irq.rs  mmu.rs  mod.rs  regs.rs  sbi.rs  spinup.rs
src/device/: mod.rs
src/device/dtb/: dtb.rs  mod.rs
src/device/exception/: mod.rs
src/init/: mod.rs
src/init/boot/: limine.rs
src/irq/: mod.rs
src/mem/: mod.rs  slabs.rs
src/mem/pmm/: mod.rs  pfndb.rs
src/mem/vmm/: kernel_mm.rs  memmap.rs  mod.rs  pagetable.rs
src/misc/: crt.rs  errno.rs  list.rs  log.rs  mod.rs  panic.rs  time.rs
src/sched/: cpulocal.rs  mod.rs
src/sched/sync/: mod.rs  mutex.rs  waitlist.rs
src/sync/: mod.rs  spinlock.rs
