[package]
name = "limine-boot-demo"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
lto = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2

[dependencies]
chrono = { version = "0.4.44", default-features = false }
flantermbindings = "0.1.4"
limine-boot = { path = "limine-boot" }
